# only_fans_turret

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Readme.md  docker-compose.yml  run_device.sh  tomlfmt.toml  turnserver.conf  web_config.toml
    .github/workflows/: build.yml
.cargo/: config.toml
.github/workflows/: build.yml  docker-build.yml
device/: Cargo.toml  build.rs
device/proto/: device.proto
device/src/: actions.rs  grpc_server.rs  lib.rs
device_server/: Cargo.toml
device_server/src/: gst_v8_stream.rs  main.rs
src/: action_service.rs  actions.rs  app_state.rs  device_server.rs  gst_v8_stream.rs  handler.rs  main.rs  message.rs  rtp.rs  sdp_handler.rs
src/devices/: grpc_server.rs  mod.rs
web/: index.html  index.html.br  script.js
web_server/: Cargo.toml
web_server/src/: app_state.rs  config.rs  handler.rs  main.rs  message.rs  rtp.rs  sdp_handler.rs  turn.rs
web_server/web/: index.html  script.js
