[package]
name = "only_fans_turret"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "device_server"
path = "src/device_server.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.3", features = ["ws", "json", "http1"], default-features = false }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc = "0.8"
futures-util = "0.3"
anyhow = "1.0"
axum-extra = { version = "0.10.1", features = ["cookie"] }
gstreamer = { version = "0.24.1",  default-features = false, optional = true }
clap = { version = "4.5.48", features = ["derive", "env"] }
tokio-serial = "5.4.5"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
#tracing-loki = { version = "0.2.6",  default-features = false, features = ["compat-0-2-1"] }

[features]
default = []
gstream = ["gstreamer"]

[build-dependencies]
tonic-prost-build= "0.14.2"
