[package]
name = "only_fans_turret"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "device_server"
path = "src/device_server.rs"


[features]
default = []
gstream = ["gstreamer"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.3", features = ["ws", "json", "http1"], default-features = false }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
futures-util = "0.3"
gstreamer = { version = "0.24.1", default-features = false, optional = true }
hmac = "0.12.1"
prost = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5.4.5"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
webrtc = "0.8"
chrono = "0.4.42"
config = "0.15.18"
#tracing-loki = { version = "0.2.6",  default-features = false, features = ["compat-0-2-1"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
