[workspace]
members = ["device", "device_server", "web_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tonic = "0.14.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
