[package]
name = "device_server"
version = "0.1.0"
edition = "2024"

[features]
default = []
gstream = ["gstreamer"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
device = { path = "../device" }
gstreamer = { version = "0.24.1", default-features = false, optional = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
